Replacing matchEntire with find in Regex