@@ -1,7 +1,6 @@
 package com.tschuchort.compiletesting
 
-import org.junit.Assert.assertFalse
-import org.junit.Assert.assertTrue
+import org.junit.Assert.*
 import org.junit.Test
 
 class JavacUtilsTest {
@@ -38,5 +37,29 @@ class JavacUtilsTest {
     @Test
     fun `Old version scheme with extra info is parsed correctly`() {
         assertTrue(isJavac9OrLater("1.11.0-bla"))
+    }
+
+    @Test
+    fun `Standard javac -version output is parsed correctly`() {
+        assertEquals("1.8.0_252", parseVersionString("javac 1.8.0_252"))
+    }
+
+    @Test
+    fun `javac -version output with JAVA OPTIONS is parsed correctly`() {
+        assertEquals(
+            "1.8.0_222",
+            parseVersionString(
+                "Picked up _JAVA_OPTIONS: -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap javac 1.8.0_222"
+            )
+        )
+    }
+
+    @Test
+    fun `Wrong javac -version output is returning null`() {
+        assertNull(
+            parseVersionString(
+                "wrong javac"
+            )
+        )
     }
 }
